[metadata]
name = cythonpackage
description = Compile a package in one .so file and remove source code
description_file = README.md
description_content_type = text/markdown ; charset=UTF-8
author = Philippe PRADOS
author_email = cythonpackage@prados.fr
maintener = Philippe PRADOS
maintener_email = cpackage@prados.fr
contact = cythonpackage
contact_email = cythonpackage@prados.fr
license = Apache-2.0
home_page = https://github.com/pprados/cythonpackage
project_urls =
    Bug Tracker = https://github.com/pprados/cythonpackage/issues
    Documentation = https://github.com/pprados/cythonpackage/
    Source Code = https://github.com/pprados/cythonpackage/
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    cython

[options]
packages = cythonpackage
zip_safe = true
python_requires= >=3.6
setup_requires =
    setuptools>=42

[entry_points]
distutils.setup_keywords =
    cythonpackage = cythonpackage:cythonpackage

[files]
packages =
    cythonpackage

[extras]
dev =
    cibuildwheel
    twine
    gitflow
    pypiserver
build =
    setuptools>=42
    cython
poetry =
    poetry-core>=1.0.0
    setuptools>=42
    cython